# mcp-helper

./: .gitignore  .rusty-hook.toml  .test-strategy-implementation-summary.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TEST_COVERAGE_IMPROVEMENT.md  proptest.toml  sonar-project.properties  test-strategy-plan.md
.claude/: settings.json
benches/: performance.rs  startup_time.rs
docs/: architecture.md  ci-optimizations.md  features.md  performance-benchmarks.md  plan.md  property-testing-implementation.md  test-coverage-improvement-plan.md  test-organization-checklist.md  test-strategy-validation-report.md  testing-guide.md
scripts/: benchmark-build.sh
src/: add.rs  cache.rs  config_commands.rs  doctor.rs  error.rs  install.rs  lib.rs  logging.rs  main.rs  runner.rs  security.rs  setup.rs
tests/: cache_error_tests.rs  claude_desktop_advanced_tests.rs  claude_desktop_client_tests.rs  claude_desktop_coverage_tests.rs  claude_desktop_tests.rs  cli_advanced_integration_tests.rs  cli_e2e_tests.rs  cli_integration_tests.rs  cli_tests.rs  client_configuration_tests.rs  client_real_tests.rs  client_tests.rs  config_file_tests.rs  config_integration_tests.rs  config_manager_tests.rs  config_rollback_simple_tests.rs  config_rollback_tests.rs  cross_platform_tests.rs  dependency_installer_tests.rs  deps_integration_tests.rs  deps_tests.rs  docker_coverage_tests.rs  docker_integration_tests.rs  e2e_basic_cli.rs  e2e_install_command.rs  e2e_installation_tests.rs  e2e_run_command.rs  error_builder_tests.rs  error_coverage_tests.rs  error_handling.rs  error_handling_install_tests.rs  error_handling_runner_tests.rs  error_panic_tests.rs  error_system_tests.rs  install_check_deps_tests.rs  install_command_comprehensive_tests.rs  (+39 more)
(+51 files in other folders)
