[package]
name = "mcp-helper"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "mcp_helper"
path = "src/lib.rs"

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
which = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
directories = "5.0"
tempfile = "3.0"
semver = "1.0"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
indicatif = "0.18"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

[dev-dependencies]
rusty-hook = "^0.11"
assert_cmd = "2.0"
predicates = "3.0"
